--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     
     <permission
         android:name="org.hairyhearts.permission.C2D_MESSAGE"
@@ -23,6 +24,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="org.hairyhearts.MainActivity"
             android:label="@string/app_name" >
@@ -33,9 +35,21 @@
             </intent-filter>
         </activity>
         
-        <activity 
-            android:name="org.hairyhearts.SuccessActivity">
-            </activity>
+        <activity android:name="org.hairyhearts.SuccessActivity" >
+        </activity>
+
+        <receiver
+            android:name="org.hairyhearts.GCMReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="org.hairyhearts" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name="org.hairyhearts.GCMService" />
     </application>
 
 </manifest>
